<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/setting" android:title="@string/title_setting"
  app:showAsAction="always"
        android:icon="@drawable/ic_build_white_18dp"/>
</menu>
